--- a/public/index.html
+++ b/public/index.html
@@ -36,5 +36,8 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script type="text/javascript" charset="utf-8">
+      window.REDUX_STATE = "__SERVER_REDUX_STATE__";
+  </script>
   </body>
 </html>
